tests/invalid/ifstatements.nim
if a != 1: echo "not equal" else: echo "equal"
